composer: make the "check" button work
* connect "check" button to the command pipeline
* standarized command logging a bit
* dupe "play" command into "check"; play will need to stay open w/ a game loop
* fix check statment's "go" vs  "execute" param name
* add context to web.resources

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ ephemera/cmd/stem
 assembly/debug.test
 cmd/asm/asm
 cmd/atlas/atlas
+cmd/check/check
 cmd/compose/compose
 cmd/import/import
 cmd/play/play
 cmd/spec/spec
 cmd/spec/spec.js
 cmd/stem/stem
-cmd/compose/compose
